--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -r requirements.txt
 script:
   - cd robotframework/imicrobe
-  - ./run_tests.sh
+  - travis_wait 30 ./run_tests.sh
   - cd ../..
   - travis_wait 30 pytest -s -n 4
   - pwd
